# jackal

clearpath_hardware_interfaces/: CMakeLists.txt  package.xml
jackal_bringup/: CMakeLists.txt  package.xml
jackal_bringup/config/: bridge.yaml  ekf.yaml  imu_filter.yaml  ros2_control.yaml  sensor_params.yaml  twist_joy.yaml  twist_mux.yaml
jackal_bringup/launch/: jackal.launch.py  jackal_diagnostic_launch.py  jackal_ekf.launch.py  jackal_gazebo.launch.py  jackal_mcu_setup.launch.py  jackal_ros2_control.launch.py  jackal_sensors.launch.py  jackal_world.launch.py
jackal_bringup/scripts/: jackal_sensors.sh  mcu_diagnostics.sh  mcu_setup.sh
jackal_bringup/worlds/: mobilab.sdf  pick_and_place.sdf
jackal_description/: CMakeLists.txt  package.xml
jackal_description/meshes/: bars.stl  mounts.stl
jackal_description/urdf/: jackal.urdf.xacro  jackal_macro.urdf.xacro  macros.urdf.xacro
jackal_description/urdf/accessories/: bridge_plate.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro  standoffs.urdf.xacro
jackal_description/urdf/accessories/camera/: camera_mount.urdf.xacro
jackal_description/urdf/accessories/camera/D435/: _d435.urdf.xacro  _usb_plug.urdf.xacro
jackal_description/urdf/accessories/lidar/: OS1-32.urdf.xacro
jackal_description/urdf/gz/: jackal.gazebo.xacro
jackal_description/urdf/ros2_control/: jackal_ros2_control.urdf.xacro
jackal_navigation/: package.xml
jackal_navigation/config/: nav2_params.yaml
jackal_navigation/launch/: jackal_navigation.launch.py  jackal_slam.launch.py
jackal_navigation/rviz/: jackal_nav.rviz
