<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_description</name>
  <version>1.0.0</version>
  <description>
    URDF description and Gazebo simulation for the Jackal platform.
    Supports integration with various robotic arms and grippers.
  </description>
  <maintainer email="nilton.csv18@edu.udesc.br">nilton</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
